--- a/report/report.tex
+++ b/report/report.tex
@@ -1,5 +1,4 @@
 \documentclass{article}
-\documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
@@ -105,7 +104,7 @@ Voici les choix qui ont eté fait pour se servir stratégiquement de nos heurist
     
 \end{itemize}
 
-\end{itemize}
+\end{enumerate}
 
 
 \section{Générateur sudoku}
